Fixed spacing issue on tour page 3 on mobile after fixing it on desktop

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -221,6 +221,7 @@ i {
   height: 10rem;
   padding: 2rem 0;
   margin-bottom: 2rem;
+  width: 100%;
 }
 
 .folder-front {
@@ -925,6 +926,10 @@ i {
 
 .text-box-2 {
   margin-top: 4rem;
+}
+
+.text-box-3 {
+  margin-top: 22rem;
 }
 
 .text-box-4 {
